Changed encoding to UTF-8

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/login.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/login.tml
@@ -44,7 +44,7 @@
 		portlet.fireEvent(event);
 
 	}
-	else tmlform.addmessage("Anmeldefehler. Bitte prüfen Sie Benutzername und Kennwort.")		
+	else tmlform.addmessage("Anmeldefehler. Bitte prÃ¼fen Sie Benutzername und Kennwort.")		
 </tml:action>
 
 <tml:script>
