#00004695: Module form: add field type "file"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/form/css.tml
@@ -32,6 +32,10 @@
 			border_bottom: "solid silver 1px"	
 		}
 	},
+
+	".buttons": {
+		margin_top: 10
+	},
 	
 	fieldset: {
 		border: "solid silver 1px",
@@ -52,6 +56,11 @@
 			font: "inherit"
 		},
 		
+		"input[type=file]":{
+			margin_bottom: 5,
+			height: "auto"
+		},
+
 		"&.error input": {
 			background: "#ffe2e2"
 		},
