renamed internal event name to CMM-element-activated

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
@@ -38,7 +38,7 @@
 			</tml:case>
 		})
 		.on("activated", function(ev, el){
-			WGA.event.fireEvent("CMM-accordion-activated", "CMM", {el:el})
+			WGA.event.fireEvent("CMM-element-activated", "CMM", {el:el})
 		})
 		.css("opacity", 1);
 	})
