module "tabs": added text-decoration:none

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/css.tml
@@ -32,7 +32,8 @@
 			float: "left",
 			padding: "10px 20px",			
 			"&:focus": {
-				outline: "none"
+				outline: "none",
+				text_decoration: "none"
 			},
 			"&.current" :{
 				margin_bottom: -1,
