--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/setting.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/setting.tml
@@ -39,6 +39,11 @@
 	<tml:input name="{scoped:width}" default="600" cssstyle="width:100%" mode="{option('mode')}"/>
 </div>
 
+<label><tml:label key="modal.load-content"/>:</label>
+<div style="margin:10px">
+	<tml:input name="{scoped:lazy_load_content_on_show}" type="boolean" mode="{option('mode')}"/>
+</div>
+
 <hr size="1">
 <p style="margin:10px">
 	<tml:label key="overlay.settings.help"/>
