#00004688: Copy & Paste also copy struct pageEditors and PageReaders

--- a/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/paste-page.tml
+++ b/OpenWGA/plugins/cm/design/tml/html/cms/dialogs/paste-page.tml
@@ -64,6 +64,8 @@
 			struct = dest.createChildEntry(Contenttype.WGObject, source.getTitle())
 			children = dest.getChildEntries();
 		}
+		struct.setReaders(source.getReaders())
+		struct.setPageEditors(source.getPageEditors())
 		
 		if(position && position!="auto"){
 			var pos;
