#00004707: Module "overlay": Fire event CMM-element-activated on load

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/overlay/render.tml
@@ -61,7 +61,10 @@
 			width: <tml:[setting] o_name="width" o_default="600"/>
 		}).on({
 			load: function(){
-				WGA.event.fireEvent("overlay-loaded", "cmm", {id: "<tml:[setting] o_name="id"/>"})			
+				WGA.event.fireEvent("overlay-loaded", "cmm", {id: "<tml:[setting] o_name="id"/>"})
+				WGA.event.fireEvent("CMM-element-activated", "CMM", {
+					el: $("#module-<tml:option name="ns"/> .content")[0]
+				})			
 			},
 			close: function(){
 				WGA.event.fireEvent("overlay-closed", "cmm", {id: "<tml:[setting] o_name="id"/>"})
