--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/config.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/config.tml
@@ -32,8 +32,7 @@
 	tml:			'modules:accordion:render',
 	settingstml:	'modules:accordion:settings',
 	includes: {
-		tml:	'@afw/include:jquery-ui-all',
-		css: 	'plugin-cm-modules/modules:accordion:css'
+		jquery_plugins: ["accordion"]
 	}
 },
 {
