--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/tabs/render.tml
@@ -43,7 +43,7 @@
 </div>
 
 <script>
-	require(["jquery"], function($) {
+	require(["jquery"], function() {
 		$("#module-<tml:option name="ns"/> .tabs a").click(function(ev){
 			ev.preventDefault();
 			$("#module-<tml:option name="ns"/> .tabs a").removeClass("current");
