--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/column-slider/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/column-slider/render.tml
@@ -1,3 +1,28 @@
+## LICENSE START ###############################################################
+## Copyright 2009, 2010 Innovation Gate GmbH. All Rights Reserved.
+## 
+## This file is part of the OpenWGA server platform.
+## 
+## OpenWGA is free software: you can redistribute it and/or modify
+## it under the terms of the GNU General Public License as published by
+## the Free Software Foundation, either version 3 of the License, or
+## (at your option) any later version.
+## 
+## In addition, a special exception is granted by the copyright holders
+## of OpenWGA called "OpenWGA plugin exception". You should have received
+## a copy of this exception along with OpenWGA in file COPYING.
+## If not, see <http://www.openwga.com/gpl-plugin-exception>.
+## 
+## OpenWGA is distributed in the hope that it will be useful,
+## but WITHOUT ANY WARRANTY; without even the implied warranty of
+## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+## GNU General Public License for more details.
+## 
+## You should have received a copy of the GNU General Public License
+## along with OpenWGA in file COPYING.
+## If not, see <http://www.gnu.org/licenses/>.
+## LICENSE END #################################################################
+
 <tml:script>
 	_responsive = WGA.design(db()).getGlobal("RESPONSIVE")
 </tml:script>
@@ -7,7 +32,12 @@
 </tml:case>
 <div class="column-slider" style="opacity:0;transition: opacity .2s">
 	<div class="columns">
-		<tml:include ref="system:include-child-modules" o-raw="true"/>
+		<tml:include ref="system:include-child-modules" o-raw="true"
+			o_cols_l="{CMM.setting('cols_l')}"
+			o_cols_m="{CMM.setting('cols_m')}"
+			o_cols_s="{CMM.setting('cols_s')}"
+			o_cols="{CMM.setting('cols')}"
+		/>
 	</div>
 </div>
 
