#00004730: module "columns": show empty columns

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/columns/css.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/columns/css.tml
@@ -32,7 +32,8 @@
 			"> div":{
 				float: "left",
 				".inner-column": {
-					padding: "0 10px"
+					padding: "0 10px",
+					min_height: 1
 				}
 			}
 		},
