--- a/OpenWGA/plugins/admin/design/tml/html/webprojects/project/cs-dump/export.tml
+++ b/OpenWGA/plugins/admin/design/tml/html/webprojects/project/cs-dump/export.tml
@@ -33,6 +33,10 @@
 		var tempFile = new Packages.de.innovationgate.utils.TemporaryFile("dump.wgacs", null, Packages.de.innovationgate.webgate.api.WGFactory.getTempDir());
 		var name = wgacore.getDispatcher().addTemporaryDownload(httpSession, tempFile);
 		options.put("endmessage", 'You can download the Dump File using the following Link:<br/> <a href="' + meta("request", "absolutewgaurl") + '/tempdwn/' + name + '">Download WGA Content Store Dump</a>');
+		options.put("includeACL", tmlform.includeACL);
+		options.put("includeArchived", tmlform.includeArchived);
+		options.put("includeSystemAreas", tmlform.includeSystemAreas);
+		
 		var file = tempFile.getFile();
 		
 		// Perform update
@@ -60,19 +64,27 @@
 </tml:action>
 
 <div id="cs-dump-info">
-	<div style="color:red; margin-bottom: 10px;">
-		NOTE: The WGA Content Store Dump functionality should NOT be used as a backup tool, especially not for large databases.
-		It is intended to create dumps that can be used as initial data set for new databases. For that cause it should be deposited as file "init.wgacs" in the file container "system" of WGA Content Store Designs and WGA Plugins.  
-	</div>
-	<button onclick="DBM.ajaxAction({
-				action: '<tml:action ref="create-cs-dump" ajax="norefresh" param1="{option('dbkey')||DBM.getConfigBean().key}"/>',
-				id: '<tml:script expression="portlet.portletkey"/>',
-				graydiv: true,
-				mode: 'norefresh'
-			}, 'create CS Dump')">
-		Create Dump
-	</button>					
-
+	<tml:form id="cs-dump">
+		<div style="color:red; margin-bottom: 10px;">
+			NOTE: The WGA Content Store Dump functionality should NOT be used as a backup tool, especially not for large databases.
+			It is intended to create dumps that can be used as initial data set for new databases. For that cause it should be deposited as file "init.wgacs" in the file container "system" of WGA Content Store Designs and WGA Plugins.  
+		</div>
+		<div style="margin:10px 0">
+			<tml:input name="includeArchived" type="boolean" options="include archived contents|true" default="true" cssstyle="margin-right:5px"/>
+			<br>
+			<tml:input name="includeACL" type="boolean" options="include ACL|true" default="true" cssstyle="margin-right:5px"/>
+			<br>
+			<tml:input name="includeSystemAreas" type="boolean" options="include system areas|true" default="true" cssstyle="margin-right:5px"/>
+		</div>
+		<button onclick="DBM.ajaxAction({
+					action: '<tml:action ref="create-cs-dump" ajax="norefresh" param1="{option('dbkey')||DBM.getConfigBean().key}"/>',
+					id: '<tml:script expression="portlet.portletkey"/>',
+					graydiv: true,
+					mode: 'norefresh'
+				}, 'create CS Dump')">
+			Create Dump
+		</button>					
+	</tml:form>
 </div>
 
 <div id="job-log" style="display:none; padding: 3px;margin-top:5px">
