#00004752: Added missing parking Icon for content module "Google map"

--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/google-map/render.tml
@@ -101,7 +101,7 @@
 					    					results[i].geometry.location,
 					    					results[i].formatted_address,
 					    					results[i].formatted_address,
-					    					"http://google-maps-icons.googlecode.com/files/parking.png"
+					    					"<tml:url type="file" doc="icons" file="parking.png"/>"
 					    				)
 									}
 								}
