--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/accordion/render.tml
@@ -33,8 +33,9 @@
 <script>
 	require(["jquery-accordion"], function(){
 		$("#module-<tml:option name="ns"/> .accordion").wga_accordion({
+			effectSpeed: "<tml:script expression="CMM.setting('effect_speed')||'fast'"/>"
 			<tml:case condition="CMM.setting('expand_first')==true">
-				active: 0
+				,active: 0
 			</tml:case>
 		})
 		.on("activated", function(ev, el){
