optimized logo sizes

--- a/OpenWGA/plugins/cm/design/scripts/css/splash.css
+++ b/OpenWGA/plugins/cm/design/scripts/css/splash.css
@@ -36,6 +36,11 @@
     font: normal 10pt verdana,tahoma,helvetica;
 }
 
+#splash img{
+	max-width: 100%;
+	max-height: 135px;
+}
+
 #splash td{
 	padding:1px;
 }
