--- a/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/modules/image/image.tml
@@ -160,13 +160,13 @@
 <tml:{div} if="_info" html_class="info"><tml:item name="_info" encode="none"/></tml:{div}>
 
 <tml:case condition="CMM.setting('onclick')=='zoom'">
-	<script>
+	<tml:[script]>
 		require(["jquery-lightbox"], function(){
 			$("#module-<tml:option name="ns"/> img").css("cursor", "pointer").lightbox({
 				group: "<tml:script expression="CMM.setting('image_group')||'default'"/>"
 			})
 		})
-	</script>
+	</tml:[script]>
 </tml:case>
 
 <tml:case condition="option('mode')=='edit'">
