--- a/OpenWGA/plugins/cm-modules/design/tml/html/system/include-module.tml
+++ b/OpenWGA/plugins/cm-modules/design/tml/html/system/include-module.tml
@@ -23,12 +23,12 @@
 ## If not, see <http://www.gnu.org/licenses/>.
 ## LICENSE END #################################################################
 
-<tml:{script} if="$mc.hasCss() & !_cmm_style_included">
+<tml:[script] if="$mc.hasCss() & !_cmm_style_included">
 	<tml:include if="$mc.hasIncludeCss" medium="stylesheets" ref="module-css" o_tml="{$mc.mod_config.includes.css}" o_designdb="{$mc.mod_config.designdb}" var="_css"/>
-	require(["<tml:url type="js" name="cmm"/>"], function(CM_MODULES){
-		CM_MODULES.createStyle("<tml:item name="$mc.getCssCode" a-css="_css" encode="none"/>", "<tml:item name="$mc.mod_config.id"/>");
+	require(["<tml:url type="js" name="cmm"/>"], function(CMM){
+		CMM.createStyle("<tml:item name="$mc.getCssCode" a-css="_css" encode="none"/>", "<tml:item name="$mc.mod_config.id"/>");
 	})
-</tml:{script}>
+</tml:[script]>
 
 <tml:{div} if="$mc.tml" wrapif="!$option_raw"
 	html_class="[module module-{$mc.module_id} {option('module-class')}]"
